chore: fix Sonar warnings
mostly about:
* changing from `stream()...collect(Collectors.toList())` to `stream()...toList()`
* using cast with variable name, e.g. `certificate instanceof X509Certificate x509Certificate`